--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   chopper: ^4.0.5
   json_annotation: ^4.4.0
   freezed_annotation: ^1.1.0
+  user_repository:
+    path: ./packages/user_repository
 
 dev_dependencies:
   flutter_test:
